--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,13 @@ body {
 .button{
   background-color: red;
 }
+p{
+  color: white;
+  font-size: 2.5rem;
+  font-family: sans-serif;
+}
+.Instructions{
+ font-size: 1rem;
+ text-align: center;
+ line-height: 50px;;
+}
